# ngspicehlp_project

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
ngspicehlp/: __init__.py  analyses.py  config.py  kicad.py  mypy.ini  plot.py  test_kicad.py  to_pandas.py  vectors.py
src/ngspicehlp/: analyses.py  control.py  simulate.py  vectors.py
src/ngspicehlp.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_kicad.py  test_vectors.py
